--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="J. Thomas">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" type="text/css">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="favicon.ico">
   </head>
   <body data-ng-controller="VideosController">
     <header>
